# i80k

./: .bazelrc  .clangd  .gitignore  BUILD  LICENCE  MODULE.bazel  Makefile  README.md  WORKSPACE  board.h  bootstrap.S  clock.c  console.c  console.h  cpu.c  cpu.h  crt0.S  debug.h  firmware.c  firmware.h  heap.c  heap.h  hwalloc.c  hwalloc.h  int.S  interrupts.c  interrupts.h  kernel.c  kernel.lds  mem.S  mem.h  pit.c  pit.h  ringbuffer.c  ringbuffer.h  sched.S  scheduler.c  scheduler.h  stdint.h  syscall.c  (+3 more)
apps/: BUILD
boards/: BUILD
boards/8088-rev2/: BUILD  crt0.S
kernel/: BUILD  cf.c  cf.h  cfi.c  cfi.h  clk.c  clk.h  clk_int.S  clock.c  clock.h  clock_int.S  console.c  console.h  cpu.S  cpu.h  debug.c  debug.h  heap.c  init.c  init.h  int.S  interrupts.c  irq.c  kernel.c  kthread.c  kthread.h  mem.c  mem.h  p8251.c  p8251.h  page.c  pc16550.c  pc16550.h  pit.c  pit.h  printk.c  scheduler.c  scheduler.h  syscall.c  syscall.h  (+8 more)
kernel/arch/: BUILD  cpu.h  ctx.S  ctx.h  fmem.S  fmem.h  mem.h
kernel/boards/: BUILD  delay.c  delay.h  devices.c  devices.h  interrupts.c  interrupts.h  timer.c  timer.h
kernel/core/: BUILD  blkdev.c  blkdev.h  blkdev_test.cc  error.h  fs.c  fs.h  interrupts.h  list.h  page.c  page.h  ringbuffer.h  scheduler.c  scheduler.h  subdev.c  subdev.h  task.c  task.h
kernel/drivers/: BUILD  driver.c  driver.h  p8251.c  p8254.c  p8259a.c  pc16550.c  uart_int.S
kernel/utils/: BUILD  list.h  list_test.cc  ringbuffer.c  ringbuffer.h  ringbuffer_test.cc
klib/: BUILD  kernel.h  malloc.c  printf.c
klib/include/: stddef.h  stdio.h  unistd.h
lib/: BUILD  malloc.h  printf.c  string.S
lib/include/: stdint.h  stdio.h  stdlib.h
libbcc/: int.S  kernel.mk  ldivmod.S  long.S
libc/: BUILD  brk.c  fs.c  io.c  kernel.mk  malloc.c  malloc.h  printf.c  process.c  put.c  string.S  strings.S  time.c
libc/include/: assert.h  endian.h  fcntl.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  (+5 more)
tests/: kernel.mk  tests.c  tests_hwalloc.c  tests_hwalloc.h
toolchain/: BUILD  ia16_toolchain_config.bzl
toolchains/: BUILD  Dockerfile  build-gcc-ia16.sh  ia16_toolchain_config.bzl
utils/: BUILD
vboard/: BUILD  go.mod  io.go  vboard.go
(+66 files in other folders)
